# tauri-plugin-schedule-task

./: Cargo.toml  README.md  Usage.md  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  ScheduleTaskActivity.kt  ScheduleTaskPlugin.kt  ScheduledTaskReceiver.kt  ScheduledTaskWorker.kt
android/src/test/java/: ExampleUnitTest.kt
examples/schedule-task/: angular.json  package.json
examples/schedule-task/src-tauri/: Cargo.toml  tauri.conf.json
examples/schedule-task/src-tauri/capabilities/: default.json
examples/schedule-task/src-tauri/src/: lib.rs  main.rs
examples/schedule-task/src/app/: app.component.html  app.component.ts
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: actor.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
