[package]
name = "tauri-plugin-schedule-task"
version = "0.1.0"
authors = [ "Charles Schaefer" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-schedule-task"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.14.0"
once_cell = "1.21.3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
