[package]
name = "tauri-plugin-schedule-task"
version = "0.1.0"
authors = [ "Charles Schaefer" ]
description = "A Tauri plugin for scheduling tasks using cron-like syntax."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-schedule-task"
documentation = "https://docs.rs/tauri-plugin-schedule-task"
repository = "https://github.com/charlesschaefer/tauri-plugin-schedule-task"
license = "MIT"
readme = "README.md"

[dependencies]
tauri = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = { version = "0.14.0", features = ["english"] }
once_cell = "1.21.3"
tokio = { version = "1.46.1" }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
